--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "private": true,
     "dependencies": {
+        "@angular-devkit/build-angular": "~0.803.20",
         "@angular/animations": "8.2.14",
         "@angular/cdk": "8.2.3",
         "@angular/common": "8.2.14",
@@ -18,33 +19,46 @@
         "@angular/core": "8.2.14",
         "@angular/forms": "8.2.14",
         "@angular/material": "8.2.3",
-        "@angular/platform-browser": "~9.1.1",
-        "@angular/platform-browser-dynamic": "~9.1.1",
-        "@angular/router": "~9.1.1",
+        "@angular/material-moment-adapter": "8.2.3",
+        "@angular/platform-browser": "8.2.14",
+        "@angular/platform-browser-dynamic": "8.2.14",
+        "@angular/platform-server": "8.2.14",
+        "@angular/router": "8.2.14",
+        "@popperjs/core": "^2.2.2",
+        "admin-lte": "2.4.12",
         "bootstrap": "^4.4.1",
-        "rxjs": "~6.5.5",
-        "tslib": "^1.10.0",
-        "zone.js": "~0.10.2"
+        "chart.js": "2.9.3",
+        "core-js": "2.6.5",
+        "file-saver": "2.0.2",
+        "jquery": "3.4.1",
+        "jqueryui": "1.11.1",
+        "rxjs": "6.5.3",
+        "tslib": "1.10.0",
+        "zone.js": "^0.10.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.901.1",
-        "@angular/cli": "^9.1.1",
-        "@angular/compiler-cli": "~9.1.1",
-        "@angular/language-service": "~9.1.1",
-        "@types/jasmine": "~3.3.8",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "^12.11.1",
-        "codelyzer": "^5.1.2",
-        "jasmine-core": "~3.4.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~4.1.0",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~2.0.1",
-        "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.4.0",
-        "protractor": "~5.4.0",
-        "ts-node": "~7.0.0",
-        "tslint": "~5.15.0",
-        "typescript": "~3.8.3"
+        "@angular/cli": "^8.3.20",
+        "@angular/compiler-cli": "8.2.14",
+        "@angular/language-service": "8.2.14",
+        "@types/bootstrap": "4.3.1",
+        "@types/jasmine": "3.5.0",
+        "@types/jasminewd2": "2.0.8",
+        "@types/jquery": "3.3.31",
+        "@types/jqueryui": "1.12.9",
+        "@types/node": "^12.12.14",
+        "codelyzer": "5.2.0",
+        "jasmine-core": "3.5.0",
+        "jasmine-spec-reporter": "4.2.1",
+        "karma": "4.1.0",
+        "karma-chrome-launcher": "3.0.0",
+        "karma-cli": "2.0.0",
+        "karma-coverage-istanbul-reporter": "2.1.1",
+        "karma-jasmine": "2.0.1",
+        "karma-jasmine-html-reporter": "1.4.2",
+        "prettier": "^1.19.1",
+        "protractor": "5.4.2",
+        "ts-node": "8.3.0",
+        "tslint": "5.20.1",
+        "typescript": "3.5.3"
     }
 }
