--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "node server.js",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "heroku-postbuild": "ng build --prod"
     },
     "private": true,
     "dependencies": {
@@ -29,11 +30,14 @@
         "bootstrap": "^4.4.1",
         "chart.js": "2.9.3",
         "core-js": "2.6.5",
+        "express": "^4.17.1",
         "file-saver": "2.0.2",
         "jquery": "3.4.1",
         "jqueryui": "1.11.1",
+        "path": "^0.12.7",
         "rxjs": "6.5.3",
         "tslib": "1.10.0",
+        "typescript": "3.5.3",
         "zone.js": "^0.10.3"
     },
     "devDependencies": {
@@ -60,5 +64,9 @@
         "ts-node": "8.3.0",
         "tslint": "5.20.1",
         "typescript": "3.5.3"
+    },
+    "engines": {
+        "node": "6.11.0",
+        "npm": "3.10.10"
     }
 }
