--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "file-saver": "2.0.2",
         "jquery": "3.4.1",
         "jqueryui": "1.11.1",
+        "ngx-spinner": "^9.0.2",
         "path": "^0.12.7",
         "rxjs": "6.5.3",
         "tslib": "1.10.0",
